welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:17: error: ';' expected but '{' found.
}	while (sortieTrouvee()==false){  
                                      ^